<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.LoginActivity">

    <EditText
        android:id="@+id/username"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"

        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/loginButton"
        style="@android:style/Widget.Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
</androidx.constraintlayout.widget.ConstraintLayout>